# statusbar

./: .gitignore  Cargo.toml
mpris-dbus/: Cargo.toml
mpris-dbus/src/: lib.rs
nm-dbus/: Cargo.toml
nm-dbus/src/: lib.rs
statusbar/: Cargo.toml  final.css
statusbar/src/: main.rs
statusbar/src/widgets/: battery.rs  clock.rs  media_player.rs  mod.rs  resources.rs  window_title.rs  workspace.rs
statusbar/src/widgets/popover/: component.rs  mod.rs  models.rs
statusbar/src/widgets/tray/: component.rs  mod.rs
statusbar/src/widgets/wifi/: component.rs  mod.rs  models.rs
statusbar/theme/: _mixins.scss  _variables.scss  base.scss  style.scss
statusbar/theme/widgets/: battery.scss  clock.scss  media_player.scss  popover.scss  resources.scss  tray.scss  wifi.scss  window_title.scss  workspace.scss
