[package]
name = "statusbar"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates
nm-dbus = { path = "../nm-dbus" }
mpris-dbus = { path = "../mpris-dbus" }

# UI Framework
relm4 = { workspace = true }
gtk4-layer-shell = { workspace = true }

# SCSS compilation
grass = { workspace = true }

# Workspace integration
niri-ipc = { workspace = true }

# System monitoring
sysinfo = { workspace = true }
procfs = { workspace = true }
battery = { workspace = true }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
